Remove IEMenu and fix buttons being misaligned

--- a/rinfox/Profile Folder/chrome/_tweaks.css
+++ b/rinfox/Profile Folder/chrome/_tweaks.css
@@ -600,9 +600,6 @@
     background-image: none !important;
     box-shadow: none !important;
   }
-  #TabsToolbar toolbarbutton {
-    margin-bottom: 0 !important;
-  }
   #navigator-toolbox-background {
     background-color: ButtonFace !important;
     padding-bottom: 0 !important;
